--- a/assets/styles/challenge.css
+++ b/assets/styles/challenge.css
@@ -55,6 +55,7 @@ button{
     padding: 5px 8px;
     border-radius: 3px;
     border: 1px solid #EF9A9A;
+    display: none;
 }
 .reset{
     background: #C62828;
